--- a/indix.html
+++ b/indix.html
@@ -61,7 +61,7 @@
             <li><a>Contact us</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost text-xl">Rinterio</a>
+        <a class="font-bold text-xl">Rinterio</a>
         <div class="navbar-end">
       </div>
       <div class="navbar-center hidden lg:flex">
@@ -83,7 +83,7 @@
    <!-- Main-section -->
     <main>
 <section class="py-10 bg-gray-100">
-<div class="container mx-auto px-4">
+<div class="container mx-auto px-4 mt-4">
 <!-- Main content wrapper -->
 <div class="max-w-7xl mxauto flex flex-col lg:flex-row items-center p-6 gap-6">
 <!-- Text-section -->
@@ -152,16 +152,57 @@
 </div>
 </section>
 <section class="container max-w-7xl mx-auto py-12 px-4">
-  <div class="text-center mb-8">
-<h2 class="text-4xl font-bold">Our Works Process</h2>
-<p class="mt-4 text-gray-600">
-  The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.
-</p>
-  </div>
+  
+   <div class="text-center mb-8">
+    <a class="btn rounded-full mb-4"><i class="fa-solid fa-arrow-right"></i> How we works</a>
 
-<div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
-<div class="bg-[#E7C1D3]"></div>
-</div>
+    <h2 class="text-3xl font-bold">
+      Our Works Process
+    </h2>
+    <p class="mt-4 text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+  </div>
+  <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
+    <div class="bg-[#E7C1D3] p-6 rounded-lg shadow">
+      <div class="space-x-4 mb-4">
+        <div class="text-black text-2xl">
+          <img src="assets/concept.png" alt="">
+        </div>
+           <h3 class="text-xl font-semibold">Concept</h3>
+      </div>
+      <p>The barn house captivates with its blend of rustic charm and modern.</p>
+    </div> 
+
+    <div class="bg-[#EFDA6E] p-6 rounded-lg shadow">
+      <div class="space-x-4 mb-4">
+        <div class="text-black text-2xl">
+          <img src="assets/flow-chart.png" alt="">
+        </div>
+           <h3 class="text-xl font-semibold">Design Process</h3>
+      </div>
+      <p>The barn house captivates with its blend of rustic charm and modern.</p>
+    </div> 
+
+    <div class="bg-[#A4DAC3] p-6 rounded-lg shadow">
+      <div class="space-x-4 mb-4">
+        <div class="text-black text-2xl">
+          <img src="assets/vision.png" alt="">
+        </div>
+           <h3 class="text-xl font-semibold">Supervision</h3>
+      </div>
+      <p>The barn house captivates with its blend of rustic charm and modern.</p>
+    </div> 
+
+    <div class="bg-[#77AAEA] p-6 rounded-lg shadow">
+      <div class="space-x-4 mb-4">
+        <div class="text-black text-2xl">
+          <img src="assets/budget-planning.png" alt="">
+        </div>
+           <h3 class="text-xl font-semibold">Budget Planning</h3>
+      </div>
+      <p>The barn house captivates with its blend of rustic charm and modern.</p>
+    </div> 
+
+  </div> 
 </section>
     </main>
     <!-- Footer-section -->
