--- a/indix.html
+++ b/indix.html
@@ -82,14 +82,14 @@
    </header>
    <!-- Main-section -->
     <main>
-<section class="py-10 bg-gray-100">
+<section class="py-10 bg-gray-100 relative">
 <div class="container mx-auto px-4 mt-4">
 <!-- Main content wrapper -->
 <div class="max-w-7xl mxauto flex flex-col lg:flex-row items-center p-6 gap-6">
 <!-- Text-section -->
 <div class="lg:w-1/2 space-y-4 text-center lg:text-left">
 <!-- About us button -->
-<button class="btn btn-outline bg-white btn-sm rounded-full mb-4">About Us</button>
+<button class="btn btn-outline bg-white btn-sm rounded-full border-0 mb-4">About Us</button>
 <!-- Main heading -->
 <h2 class="text-4xl font-bold text-[#212121]">We design thoughtful, <br> liveable spaces</h2>
 <!-- P-text  -->
@@ -122,6 +122,7 @@
 </div>
 
 </section>
+<!-- Review section  -->
 <section class="py-10 bg-gray-100">
 <div class="container mx-auto px-4">
 <div class="bg-white shadow-lg rounded-lg p-6 max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 text-center">
@@ -151,6 +152,7 @@
   </div>
 </div>
 </section>
+<!-- Our Works Process -->
 <section class="container max-w-7xl mx-auto py-12 px-4">
   
    <div class="text-center mb-8">
@@ -204,10 +206,64 @@
 
   </div> 
 </section>
+<!-- Our Latest Portfolio -->
+ <section>
+  <div class="text-center mb-10">
+    <button class="btn btn accents mb-4 bg-lime-100 hover:bg-lime-200 rounded-full w-60 h-full border-0">
+      <i class="fa-solid fa-arrow-right"></i>Explore our Latest works
+    </button>
+    <h2 class="text-4xl font-bold mb-4">Our Latest Portfolio</h2>
+    <p class="text-lg text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+    </div>
+ </section>
+<!-- From section -->
+<section class="bg-cover bg-center h-screen" style="background-image: url(assets/bg.jpg);">
+<div class="max-w-5xl mx-auto px-4 py-12">
+<div class="text-center mb-10">
+<button class="btn btn accents mb-4 bg-lime-100 hover:bg-lime-200 rounded-full w-52 h-full border-0">
+  <i class="fa-solid fa-arrow-right"></i> Let's Connect
+</button>
+<h2 class="text-4xl font-bold mb-4">Let’s Discuss Next Project</h2>
+<p class="text-lg text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+</div>
+<!-- contact form  -->
+<form class=" p-8 shadow-md  space-y-6">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+<input class="input input-bordered rounded-full w-full" type="text" placeholder="First name">
+<input class="input input-bordered rounded-full w-full" type="text" placeholder="LastName">
+<input class="input input-bordered rounded-full w-full" type="text" placeholder="Phone Number">
+<input class="input input-bordered rounded-full w-full" type="text" placeholder="Email Number">
+  </div>
+  <textarea placeholder="Write your message here" class="textarea textared-bordered w-full"></textarea>
+  <!-- submit button  -->
+   <button class="btn btn-accent bg-[#ABEF5F] w-full rounded-full hover:bg-lime-400 border-0">SendMail <i class="fa-solid fa-arrow-right"></i></button>
+</form>
+</div>
+</section>
     </main>
     <!-- Footer-section -->
-     <footer>
-
+     <footer class="bg-[#1C1C1C] text-white text-center py-10 px4">
+<div class="mb-6">
+<div class="flex justify-center items-center mb-3">
+  <span class="bg-[#ABEF5F] p-2 rounded-full text-gray-900 text-xl"><i class="fa-solid fa-arrow-right"></i></span>
+  <h1 class="text-2xl font-bold ml-2 text-white">Rinterio</h1>
+</div>
+<p class="text-[#737373] max-w-lg mx-auto text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+</div>
+<!-- navigation links -->
+ <div class="gap-10">
+<div class="flex flex-col sm:flex-row justify-center gap-10 sm:gap-8 mb-8 text-[#E9E9E9] text-sm">
+<a class="hover:text-gray-200 mx-10" href="#">Home</a>
+<a class="hover:text-gray-200 mx-10 " href="#">Services</a>
+<a class="hover:text-gray-200 mx-10" href="#">Portfolio</a>
+<a class="hover:text-gray-200 mx-10 " href="#">Blog</a>
+<a class="hover:text-gray-200 mx-10 " href="#">Contact Us</a>
+</div>
+ </div>
+ <!-- action button  -->
+  <div class="flex justify-center">
+<button class="btn btn-accent bg-[#ABEF5F] border-0 text-[#1C1C1C] hover:bg-lime-400 text-lg font-semibold rounded-full  max-w-xs"> Book Consult <i class="fa-solid fa-arrow-right"></i></span></button>
+  </div>
      </footer>
 </body>
 </html>
