Read Our Articles and News done

--- a/indix.html
+++ b/indix.html
@@ -85,7 +85,7 @@
 <section class="py-10 bg-gray-100 relative">
 <div class="container mx-auto px-4 mt-4">
 <!-- Main content wrapper -->
-<div class="max-w-7xl mxauto flex flex-col lg:flex-row items-center p-6 gap-6">
+<div class="max-w-7xl mx-auto flex flex-col lg:flex-row items-stretch p-6 gap-6">
 <!-- Text-section -->
 <div class="lg:w-1/2 space-y-4 text-center lg:text-left">
 <!-- About us button -->
@@ -115,8 +115,8 @@
    </div>
 </div>
 <!-- Image section -->
-<div class="lg:w-1/2">
-<img class="rounded-lg shadow-lg max-w-7xl" src="assets/Rectangle.png" alt="">
+<div class="lg:w-1/2 flex items-center">
+<img class="rounded-lg shadow-lg w-full h-full object-cover" src="assets/Rectangle.png" alt="">
   </div>
 </div>
 </div>
@@ -216,8 +216,76 @@
     <p class="text-lg text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
     </div>
  </section>
+ <!-- Read Our Articles and News -->
+  <section class="bg-gray-100 py-10">
+<div class="container mx-auto px-4">
+  <div class="text-center mb-8">
+    <button class="btn btn accents mb-4 bg-lime-100 hover:bg-lime-200 rounded-full w-60 h-full border-0">
+      <i class="fa-solid fa-arrow-right"></i>Rinterio News
+    </button>
+    <h2 class="text-4xl font-bold mb-4">Read Our Articles and News</h2>
+    <p class="text-lg text-gray-600">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+    </div>
+    <!-- card-section -->
+     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+      <!-- single card 1 -->
+<div class="card bg-white shadow-lg rounded-xl">
+  <figure>
+    <img class="w-98 h-48 object-cover py-4 rounded-xl" src="assets/article1.png" alt="article 1">
+  </figure>
+  <div class="card-body">
+    <div class="flex items-center text-sm text-gray-500 mb-2">
+      <span class="mr-2"><i class="fas fa-calender-alt"></i> July 14, 2024</span>
+      <span><i class="fas fa-user"></i> By Admin</span>
+    </div>
+    <h3 class="card-taitle text-gray-900"> How to choose the furniture right for your home.</h3>
+    <p class="text-gray-600 text-sm">The barn house captivates with its blend of rustic charm and modern</p>
+    <div class="card-actions mt-4">
+<a class="text-success font-semibold inline-flex items-center" href="">Read More <i class="fas fa-arrow-right ml-2"></i> </a>
+    </div>
+  </div>
+</div>
+     <!-- single card 2 -->
+     <div class="card bg-white shadow-lg rounded-xl">
+      <figure>
+        <img class="w-68 h-48 py-4 object-cover rounded-xl" src="assets/article2.png" alt="article 1">
+      </figure>
+      <div class="card-body">
+        <div class="flex items-center text-sm text-gray-500 mb-2">
+          <span class="mr-2"><i class="fas fa-calender-alt"></i> July 14, 2024</span>
+          <span><i class="fas fa-user"></i> By Admin</span>
+        </div>
+        <h3 class="card-taitle text-gray-900"> How to choose the furniture right for your home.</h3>
+        <p class="text-gray-600 text-sm">The barn house captivates with its blend of rustic charm and modern</p>
+        <div class="card-actions mt-4">
+    <a class="text-success font-semibold inline-flex items-center" href="">Read More <i class="fas fa-arrow-right ml-2"></i> </a>
+        </div>
+      </div>
+    </div>
+
+     <!-- single card 3 -->
+     <div class="card bg-white shadow-lg rounded-xl">
+      <figure>
+        <img class="w-68 h-48 py-4 object-cover rounded-xl" src="assets/article3.png" alt="article 1">
+      </figure>
+      <div class="card-body">
+        <div class="flex items-center text-sm text-gray-500 mb-2">
+          <span class="mr-2"><i class="fas fa-calender-alt"></i> July 14, 2024</span>
+          <span><i class="fas fa-user"></i> By Admin</span>
+        </div>
+        <h3 class="card-taitle text-gray-900"> How to choose the furniture right for your home.</h3>
+        <p class="text-gray-600 text-sm">The barn house captivates with its blend of rustic charm and modern</p>
+        <div class="card-actions mt-4">
+    <a class="text-success font-semibold inline-flex items-center" href="">Read More <i class="fas fa-arrow-right ml-2"></i> </a>
+        </div>
+      </div>
+    </div>
+   </div>
+   </div>
+   </div>
+  </section>
 <!-- From section -->
-<section class="bg-cover bg-center h-screen" style="background-image: url(assets/bg.jpg);">
+<section class="bg-cover bg-center h-screen mt-2" style="background-image: url(assets/bg.jpg);">
 <div class="max-w-5xl mx-auto px-4 py-12">
 <div class="text-center mb-10">
 <button class="btn btn accents mb-4 bg-lime-100 hover:bg-lime-200 rounded-full w-52 h-full border-0">
