--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           </nav>
          </div>
          
-         <div class="bg-white hidden rounded-full"><i class="fa-solid mx-3  rounded-full fa-magnifying-glass"></i></div>
-         <div><i class="fa-solid mx-4 fa-cart-shopping"></i></div>
+         <!-- <div class="bg-white hidden rounded-full"><i class="fa-solid mx-3  rounded-full fa-magnifying-glass"></i></div>
+         <div><i class="fa-solid mx-4 fa-cart-shopping"></i></div> -->
         
          <!-- Book consult button -->
           <div class="hidden md:block">
